# plat

./: CMakeLists.txt  Sample.inl  del_log.sh  plat.cpp  plat.h
CMake/Modules/: UrhoCommon.cmake
Utilities2D/: Sample2D.cpp  Sample2D.h
